# python-learn-by-doing

./: .gitignore  LICENSE  README.md
commons-shared-libs/: README.md
commons-shared-libs/client-connectors/client_connectors/http/: __init__.py  client.py
commons-shared-libs/client-connectors/client_connectors/kakfa/: config.py  interfaces.py
commons-shared-libs/client-connectors/tests/: utils.py
commons-shared-libs/client-connectors/tests/kafka/: test_consumer.py  test_kafka_clients.py
commons-shared-libs/observability/: Makefile  pyproject.toml
commons-shared-libs/observability/observability/: config.py  factory.py  observability_service.py
commons-shared-libs/observability/observability/logging/: __init__.py
commons-shared-libs/observability/tests/tracer/: conftest.py
commons-shared-libs/service-management/service_management/core/: manager.py  service.py
commons/connector/: pyproject.toml
commons/connector/src/connectors/http/: client.py
commons/connector/src/connectors/websocket/: client.py
commons/observability/: pyproject.toml
commons/observability/src/observability/: config.py  observability_service.py
commons/observability/src/observability/logging/: service.py
commons/observability/src/observability/metrics/: service.py
localpypi/: README.md
shared-libs/: Makefile.common  README.md
shared-libs/client-connectors/: Makefile  pyproject.toml
shared-libs/client-connectors/client_connectors/elasticsearch/: client.py  config.py
shared-libs/client-connectors/client_connectors/http/: __init__.py  client.py  client_observability_enabled.py
shared-libs/client-connectors/client_connectors/http/websocket/: client.py
shared-libs/client-connectors/client_connectors/kakfa/: client.py  config.py  producer.py
shared-libs/client-connectors/tests/: utils.py
shared-libs/client-connectors/tests/elasticsearch/: test_es_client.py
shared-libs/client-connectors/tests/http/: test_http_client.py  test_websockets.py
shared-libs/client-connectors/tests/kafka/: test_kafka_clients.py
shared-libs/commons-shared-libs/: README.md
shared-libs/commons-shared-libs/client-connectors/: Makefile  pyproject.toml
shared-libs/commons-shared-libs/client-connectors/client_connectors/elasticsearch/: client.py  config.py
shared-libs/commons-shared-libs/client-connectors/client_connectors/http/: client.py
shared-libs/commons-shared-libs/client-connectors/client_connectors/http/websocket/: client.py
shared-libs/commons-shared-libs/client-connectors/client_connectors/kakfa/: client.py  serializer.py
shared-libs/commons-shared-libs/client-connectors/tests/elasticsearch/: test_es_client.py
shared-libs/commons-shared-libs/client-connectors/tests/kafka/: test_consumer.py  test_kafka_clients.py
shared-libs/commons-shared-libs/observability/: Makefile  pyproject.toml
shared-libs/commons-shared-libs/observability/observability/: config.py  factory.py  observability_service.py
shared-libs/commons-shared-libs/observability/observability/logging/: service.py
shared-libs/commons-shared-libs/observability/observability/metrics/: decorator.py  service.py
shared-libs/commons-shared-libs/observability/observability/tracer/: decorator.py  service.py
shared-libs/commons-shared-libs/observability/tests/logger/: test_service.py
shared-libs/commons-shared-libs/observability/tests/tracer/: conftest.py  test_service.py
shared-libs/commons-shared-libs/service-management/: Makefile  pyproject.toml
shared-libs/commons-shared-libs/service-management/service_management/core/: manager.py  registry.py  service.py  status.py
shared-libs/connector/src/connectors/websocket/: client_observability_enabled.py
shared-libs/observability/: Makefile  pyproject.toml
shared-libs/observability/observability/: __init__.py  config.py  observability_service.py
shared-libs/observability/observability/logging/: __init__.py  service.py
shared-libs/observability/observability/metrics/: __init__.py  decorator.py  service.py
shared-libs/observability/observability/tracer/: __init__.py  decorator.py  service.py
shared-libs/observability/src/observability/tracer/: service.py
shared-libs/observability/tests/logger/: test_service.py
shared-libs/observability/tests/metrics/: test_service.py
shared-libs/observability/tests/tracer/: test_service.py
shared-libs/peristence-shared-libs/cassandra_persistence/: Makefile  pyproject.toml
shared-libs/peristence-shared-libs/mongo_persistence/: Makefile  pyproject.toml
shared-libs/peristence-shared-libs/mongo_persistence/mongo_persistence/core/: collection.py
shared-libs/peristence-shared-libs/mongo_persistence/mongo_persistence/repository/: base.py
shared-libs/peristence-shared-libs/mongo_persistence/src/mongo_persistence/core/: client.py  collection.py  config.py
shared-libs/peristence-shared-libs/mongo_persistence/tests/: conftest.py  patch_observability.py
shared-libs/peristence-shared-libs/mongo_persistence/tests/core/: test_mongo_collection.py  test_mongo_collection_aggregation_integration.py  test_mongo_collection_integration.py
shared-libs/peristence-shared-libs/postgres_persistence/: Makefile  pyproject.toml
shared-libs/peristence-shared-libs/postgres_persistence/postgres_persistence/core/: client.py  config.py
shared-libs/peristence-shared-libs/postgres_persistence/postgres_persistence/repository/: base.py
shared-libs/peristence-shared-libs/postgres_persistence/src/postgres_persistence/core/: config.py
shared-libs/peristence-shared-libs/postgres_persistence/tests/: conftest.py
shared-libs/peristence-shared-libs/postgres_persistence/tests/core/: test_client.py  test_repository_integration.py  user.py
shared-libs/service-management/: Makefile  pyproject.toml
shared-libs/service-management/service_management/: manager.py  service.py  status.py
shared-libs/service-management/service_management/core/: __init__.py  manager.py  service.py
tools/: README.md
tools/localpypi/: Makefile  README.md  docker-compose.yaml
