[project]
name = "commons_service_management"
version = "0.2.4"
description = ""
authors = [
    {name = "Priyesh Kannan",email = "10197527+PriyeshKannan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "service_management", from = "."}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"
mypy = "^1.16.1"
pytest-mock = "^3.14.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
report = "^0.0.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
src = ["service_management"]
exclude = ["test/*"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812"]
exclude = ["test/*"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "-ra -q --cov=service_management --cov-report=term-missing"
testpaths = ["tests"]


[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"


[[tool.poetry.source]]
name = "localpypi"
url = "http://127.0.0.1:3141/pypiuser/dev/+simple/"
priority = "primary"