[project]
name = "mongo-persistence"
version = "0.4.1"
description = ""
authors = [
    {name = "Priyesh Kannan",email = "10197527+PriyeshKannan@users.noreply.github.com"}
]
readme = "README.md"

[tool.poetry]
packages = [{include = "mongo_persistence", from = "."}]

[tool.poetry.dependencies]
python = "^3.12"
motor = "^3.3.1"
pydantic = "^2.0.0"
commons-observability = ">=0.5.1,<1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"
mypy = "^1.16.1"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
report = "^0.0.1"
testcontainers = "^4.10.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
src = ["mongo_persistence"]
exclude = [
    "tests",
    "test_*.py",
    "scripts/legacy/",
    ".venv",
]
ignore = ["D104", "D102"]

select = ["E", "F", "D"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812"]
exclude = ["test/*"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "-ra -q -s --cov=mongo_persistence --cov-report=term-missing"
testpaths = ["tests"]


[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"

[[tool.poetry.source]]
name = "localpypi"
url = "http://127.0.0.1:3141/pypiuser/dev/+simple/"
priority = "primary"
